--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,4 +10,7 @@
   width: 200px;
   height: 50px;
   border: 1px solid transparent;
+  display: flex;
+    align-items: center;
+ justify-content: center;
 }
