--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -9,6 +9,7 @@ font-size: 28px;
 line-height: 100%;
 text-align: center;
 margin-bottom: 30px;
+
     }
     &-item{
         background-color: #ffffff;
@@ -33,6 +34,33 @@ margin-bottom: 30px;
    font-size: 16px;
  line-height: 100%;
    margin-top: 10px;
+    }
+  
+    @media screen and (min-width:768px)
+    {
+      &-list{
+        display: grid;
+    grid-template-columns: 1fr 1fr;
+      }
+    }
+    @media screen and (min-width:768px) and (max-width:1200px)
+         {&-item:nth-child(1){
+      margin-right: 30px;
+    }
+     &-item:nth-child(3){
+      margin-right: 30px;
+    }}
+    @media screen and (min-width:1200px){
+      &-list{
+        display: flex;
+        gap: 30px;
+      }
+      &-item{
+        margin-right: 0;
+      }
+      &-title{
+        font-size: 36px;
+      }
     }
 }
 
