--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,4 @@
   .container{
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -9,4 +8,13 @@
   .container{
     width: 480px;
   }}
-  
+  @media screen and (min-width: 768px) and (max-width:768px){
+    .container{
+      width: 768px;
+    }
+    
+  }
+  @media screen and (min-width: 1200px){
+    .container{
+      width: 1200px;
+    }}
