--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -1,52 +1,82 @@
-// .feature{
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-//   &-list{  
-//   display: flex;
-//   flex-wrap: wrap;
-//   padding-left: 0;
-//   gap: 30px;
-// }
-// &-item{
-//   width: 270px;
-// }
-// &-background{
-//   width: 270px;
-//   height: 120px;
-//   
-//   display: flex;
-//   justify-content: center;
-//   
-// }
-// &-title{
-//   color:$TitleTextColor;
-//   font-weight: 700;
-//   font-size: 14px;
-//   line-height: 100%;
-//   margin-top: 30px; 
-// }
-// &-text{
-//   color:$PrimerColor;
-//   font-size: 14px;
-//   line-height: 1.71;
-//   margin-top: 10px;
-// }
-// }
+.feature{
+ 
+ 
+
+
+&-background{
+  width: 354px;
+  height: 120px;
+  background-color: #f5f4fa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+&-title{
+  color:$TitleTextColor;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  margin-top: 30px; 
+}
+&-text{
+  color:$PrimerColor;
+  font-size: 14px;
+  line-height: 1.71;
+  margin-top: 10px;
+}
+@media screen and (min-width:768px)
+{
+    padding-top: 60px;
+  padding-bottom: 60px;
+  &-list{
+        display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  &-item{
+    width: 354px;
+  }
+
+}
+@media screen and (min-width:1200px){
+   padding-top: 94px;
+  padding-bottom: 94px;
+   &-list{  
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  gap: 30px;
+}
+&-item{
+  width: 270px;
+}
+&-background{
+  width: 270px;
+    height: 120px;
+    background-color: #f5f4fa;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+}
+}
 
 /*mobile style*/
 .feature{
-  padding-top: 60px;
+  @media screen  and (max-width:480px){
+      padding-top: 60px;
   padding-bottom: 60px;
-  
   &-background{
     background-color: #f5f4fa;
 align-items: center;
 width: 100%;
 padding: 25px 195px;
 ;}
-&-item:not(:last-child) {
-  margin-bottom: 30px;
-}
+
 
   
   &-title{
@@ -65,3 +95,5 @@ text-align: center;
 
 }
 }
+  }
+
