--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -21,6 +21,36 @@
   text-align: center;
  
   }
+  @media screen and (min-width:768px){
+    background-image: linear-gradient(to right, #2f303a66),
+    url(../images/background-image.jpg);
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 118px 204px;
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+  }
+ 
+  &-title{
+     color:$WhiteColor;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  text-align: center;
+ 
+  }
+  @media screen and (min-width:1200px){
+        padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
+    &-title{
+          font-size: 44px;
+    }
+  }
 }
 
 
