--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,6 +6,9 @@ display: inline-block;
     letter-spacing: .03em;
     line-height: 100%;
     color: #2196f3;
+@media screen and (min-width:768px){
+     font-size: 24px;
+}
 }
 .main-nav__logo--accent{
      color: #000000;
