--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,14 +1,32 @@
 .menu-container{
+  
+    background-color: white;
+   
+    z-index: 998;
+    
+}
+@media screen and (max-width:767px){
+.menu-container{
     display: none;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: white;
-    padding-top: 48px;
+     padding-top: 48px;
     padding-bottom: 48px;
     padding-left: 40px;
     &.is-open{
         display: block;
+    }
+}
+}
+@media screen and (min-width:768px){
+    .menu-container{
+         display: flex;
+            align-items: center;
+        &.is-open{
+            display: flex;
+            align-items: center;
+        }
     }
 }
