--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,7 +1,11 @@
 .page-header {
   border-bottom: solid 1px #ececec;
   position: relative;
-  padding: 16px 15px;
+@media screen and (max-width:480px)
+{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 }
 .menu-button{
   display: inline-flex;
@@ -22,7 +26,11 @@ display: block;
   &.is-open .icon-menu{
     display: none;
   }
+  @media screen and (min-width:768px)
+  {display: none;}
 }
+
+  @media screen and (max-width:767px){
 .navigation{
  margin-bottom: 302px;
   &-item:not(:last-child){
@@ -34,36 +42,120 @@ display: block;
     line-height: 100%;
     color: #212121;
   }
-}
-.contact{
-  &-item{
-    margin-bottom: 32px;
   }
-  &-link{
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 100%;
-    color: #757575;
-  &__number{
-    font-size: 24px;
-    
-  }}
-    &-icon{
-      display: none;
-    }
-  
-}
-.social-header{
+   .social-header{
   display: flex;
   gap: 20px;
       margin-top: 32px;
     margin-bottom: 48px;
+    
 }
 .social-link__header{
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
+}}
+
+
+@media screen and (min-width:768px){
+  .social-header{
+  display: none;
+}}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+  }
+
+  .navigation {
+
+&-link {
+  color:$TitleTextColor;
+  font-weight: 500;
+  line-height: 100%;
+  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  &:focus, &:hover{
+    color:$AccentColor;
+  }}
+
+  @media screen and (min-width:768px)
+  {
+& {margin-left: 88px;}
+  
+  &-list{
+  display: flex;
+
+} &-item{
+    padding-bottom: 32px;
+    padding-top: 32px;
+  }
+   & .navigation-item:not(:last-child){
+  margin-right: 50px;  }
+  &-link{
+ font-size: 14px;
+padding-bottom: 32px;
+padding-top: 32px;
+  }
 }
+@media screen and (min-width:1200px){
+  &{
+    margin-left: 93px;
+  }
+}
+  }
+
+.contact {
+  &-link{color: #757575;}
+ &-icon{
+   fill: #757575;
+  margin-right: 10px;}
+  &-link:hover,&-link:focus{color: #2196f3;}
+ &-link:hover .contact-icon {
+    fill: #2196f3;}
+  
+  @media screen and (max-width:767px){
+&-item{
+    margin-bottom: 32px;
+  }
+&-link{
+   font-weight: 500;
+    font-size: 34px;
+    line-height: 100%;
+}
+&-icon{
+      display: none;
+    }
+    &-link__number{
+    font-size: 24px;
+    
+  }}
+
+@media screen and (min-width:768px)
+{
+ margin-left: 84px;
+ &-item:not(:last-child){
+  margin-bottom: 10px;
+}
+&-link{
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 100%;
+ }}
+@media screen and (min-width:1200px){
+display: flex;
+margin-left: 305px;
+&-item:not(:last-child){
+margin-right: 50px;
+margin-bottom: 0;}
+&-link{
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-size: 14px;
+
+}
+
+  }}
 .accent{
   color: $AccentColor;
   position: relative;
@@ -78,85 +170,3 @@ display: block;
     bottom: -1px;
     border-radius: 2px;
   }}
-// .main-nav {
-//   display: flex;
-//   align-items: center;
-//   padding-bottom: 0;
-//   &__logo
-//     {
-//    color:$AccentColor;
-//   font-family: Raleway, sans-serif;
-//   font-weight: 700;
-//   font-size: 26px;
-//   line-height: 100%;}
-//   &--accent{  color: #000000;
-//   font-family: Raleway, sans-serif;
-//   font-weight: 700;
-//   font-size: 26px;
-//   line-height: 100%;
-//  }
-//   }
-//   .navigation {
-//   margin-left: 93px;
-//   &-list{
-//   display: flex;
-// & .navigation-item:not(:last-child){
-//   margin-right: 50px;  }
-// }
-// &-link {
-//   color:$TitleTextColor;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 100%;
-//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   padding-bottom: 32px;
-//   padding-top: 32px;
-//   &:focus, &:hover{
-//     color:$AccentColor;
-//   }
-// }
-// }
-// .accent{
-//   color: $AccentColor;
-//   position: relative;
-//   &::after{
-//     content: "";
-//     display: inline-block;
-//     height: 4px;
-//     width: 100%;
-//     background-color:$AccentColor;
-//     position: absolute;
-//     left: 0;
-//     bottom: -1px;
-//     border-radius: 2px;
-//   }
-// }
-// .contact {
-//   display: flex;
-//   margin-left: auto;
-// &-item:not(:last-child){
-//      margin-right: 50px;
-// }
-// &-link{
-//      color: #757575;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 100%;
-//   transition-duration: 250ms;
-//     padding-bottom: 32px;
-//   padding-top: 32px;
-//   display: flex;
-//   align-items: center;
-//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   &:focus, &:hover{
-//     color:$AccentColor;
-// }
-// }
-// &-icon{
-//    fill: #757575;
-//   margin-right: 10px;
-//   .contact-link:hover &{
-//     fill:$AccentColor;
-//   }  
-// }
-// }
