--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -50,13 +50,20 @@
   line-height: 1.88;
   margin-top: 4px;
   }
-}
- @media screen and (max-width: 767px){
+  @media screen and (max-width: 767px){
   .project{
     display: block;
     &-item{
       margin-bottom: 30px;
+      width: 450px;
     }
+  }}
+   @media screen and (min-width:768px) and (max-width:1199px){
+   &-item{
+    width: 354px;
+   }
   }
-  
  }
+
+ 
+ 
