--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -51,6 +51,8 @@ margin-bottom: 30px;
       margin-right: 30px;
     }}
     @media screen and (min-width:1200px){
+      padding-top: 94px;
+      padding-bottom: 94px;
       &-list{
         display: flex;
         gap: 30px;
