--- a/css/main.css
+++ b/css/main.css
@@ -97,14 +97,14 @@ body {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  width: 100%;
 }
-
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
@@ -114,6 +114,7 @@ body {
     width: 1200px;
   }
 }
+
 .page-header {
   border-bottom: solid 1px #ececec;
   position: relative;
@@ -573,6 +574,10 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
+  .command {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .command-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -678,6 +683,10 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
+  .command {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .command-list {
     display: -webkit-box;
     display: -ms-flexbox;
