--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,18 +3,16 @@
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  }
-  @media screen and (max-width: 480px){
-  .container{
+  width: 100%;
+  @media screen and (min-width: 480px){
+  
     width: 480px;
-  }}
-  @media screen and (min-width: 768px) and (max-width:768px){
-    .container{
+  }
+  @media screen and (min-width: 768px){
+ 
       width: 768px;
     }
-    
-  }
+
   @media screen and (min-width: 1200px){
-    .container{
       width: 1200px;
     }}
