--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 img {
   display: block;
   height: auto;
-  width: 100%;
+  max-width: 100%;
 }
 
 ul {
@@ -119,7 +119,7 @@ body {
   border-bottom: solid 1px #ececec;
   position: relative;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .page-header {
     padding-top: 16px;
     padding-bottom: 16px;
@@ -309,10 +309,14 @@ body {
   border-radius: 2px;
 }
 
-@media screen and (max-width: 480px) {
+.hero {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4))), url(/images/Header-phone-img.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)), url(/images/Header-phone-img.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 767px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4))), url(../images/background-image.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)), url(../images/background-image.jpg);
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
@@ -333,9 +337,6 @@ body {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4))), url(../images/background-image.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)), url(../images/background-image.jpg);
-    max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
     padding: 118px 204px;
@@ -369,6 +370,36 @@ body {
   }
 }
 
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/images/Header-phone-img@2x.jpg);
+    background-size: contain;
+  }
+}
+@media (min-width: 481px) {
+  .hero {
+    background-image: url(/images/Header-tablet__img.jpg);
+    background-size: contain;
+  }
+}
+@media (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 481px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/images/Header-tablet__\ img@2x.jpg);
+    background-size: contain;
+  }
+}
+@media screen and (min-width: 769px) {
+  .hero {
+    background-image: url(/images/background-image.jpg);
+    background-size: contain;
+  }
+}
+@media screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/images/background-img@2x.jpg);
+    background-size: contain;
+  }
+}
 .feature-background {
   width: 354px;
   height: 120px;
@@ -395,6 +426,33 @@ body {
   font-size: 14px;
   line-height: 1.71;
   margin-top: 10px;
+}
+@media screen and (max-width: 767px) {
+  .feature {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .feature-background {
+    background-color: #f5f4fa;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .feature-title {
+    color: #212121;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 100%;
+    margin-top: 30px;
+    text-align: center;
+  }
+  .feature-text {
+    color: #757575;
+    font-size: 14px;
+    line-height: 1.71;
+    margin-top: 10px;
+  }
 }
 @media screen and (min-width: 768px) {
   .feature {
@@ -444,35 +502,6 @@ body {
 }
 
 /*mobile style*/
-@media screen and (max-width: 480px) {
-  .feature {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  .feature-background {
-    background-color: #f5f4fa;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 100%;
-    padding: 25px 195px;
-  }
-  .feature-title {
-    color: #212121;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 100%;
-    margin-top: 30px;
-    text-align: center;
-  }
-  .feature-text {
-    color: #757575;
-    font-size: 14px;
-    line-height: 1.71;
-    margin-top: 10px;
-  }
-}
-
 .work {
   padding-bottom: 94px;
 }
@@ -866,7 +895,7 @@ body {
     width: 226px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .client-item:nth-child(2n+1) {
     margin-right: 30px;
   }
@@ -881,7 +910,7 @@ body {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .footer-social {
     margin-top: 60px;
     margin-bottom: 60px;
