--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,7 @@ body {
 @media screen and (min-width: 769px) {
   .hero {
     background-image: url(/images/background-image.jpg);
-    background-size: contain;
+    background-size: cover;
   }
 }
 @media screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 2dppx) {
@@ -501,7 +501,6 @@ body {
   }
 }
 
-/*mobile style*/
 .work {
   padding-bottom: 94px;
 }
@@ -770,7 +769,7 @@ body {
 
 .social-icon {
   display: block;
-  fill: #AFB1B8;
+  fill: #afb1b8;
 }
 
 .footer-social__icon {
@@ -900,13 +899,14 @@ body {
     margin-right: 30px;
   }
   .client-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .client-item {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 30px;
   }
 }
 
@@ -1121,7 +1121,7 @@ body {
   margin-bottom: 20px;
   padding: 15px 16px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .footer-form__field input {
     width: 100%;
   }
