--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,140 +1,98 @@
-.client{
-  padding-top:60px;
+.client {
+  padding-top: 60px;
   padding-bottom: 60px;
-  
-  &-title{
+
+  &-title {
     font-weight: 700;
     font-size: 28px;
     line-height: 100%;
     text-align: center;
-      }
-     
-      &-list{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-      }
-      &-item:hover{
-        
-     border-color:$AccentColor;}
-      
-       
-      &-link{
-        width: 210px;
-   height: 92px;
-   border: 1px solid #afb1b8;
- border-radius: 4px;
- display: flex;
- justify-content: center;
- align-items: center;
- &:focus, &:hover {
-    border-color: $AccentColor;
   }
-      }
-      &-icon{
-        fill: #afb1b8;
-          transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .client-link:hover &,
-  .client-link:focus &{
-    fill:$AccentColor;
-      }}
-      @media screen and (min-width:1200px){
-        padding-top: 93px;
-        padding-bottom: 93px;
-        &-title{
-          font-size: 36px;
-          margin-bottom: 50px;
-        }
-        &-list{
-          display: flex;
-    gap: 30px;
-    justify-content: center;
-        }
-        &-link{
-          width: 170px;
-          height: 92px;
-        }
-      }
-        @media screen and (min-width:768px) and (max-width:1199px){
-        &-item:nth-child(1){
-margin-right: 30px;
-margin-bottom: 30px;} &-item:nth-child(2){
-margin-right: 30px;margin-bottom: 30px;}
-&-item:nth-child(3){
-  margin-bottom: 30px;
-}
-&-item:nth-child(4){
-margin-right: 30px;}
-&-item:nth-child(5){
-margin-right: 30px;}
-&-list{
-          grid-template-columns: 1fr 1fr 1fr;
-          margin-top: 30px;
-        }
-        &-link{
-          width: 226px;
-        }
-      }
-    
-    @media screen and (max-width:767px)
-    {
-&-item:nth-child(2n+1) { margin-right:30px};
- &-container{
+
+  &-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+  &-item:hover {
+    border-color: $AccentColor;
+  }
+
+  &-link {
+    width: 210px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:focus,
+    &:hover {
+      border-color: $AccentColor;
     }
-     &-item{
-        display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top:30px;
-    
-      }
+  }
+  &-icon {
+    fill: #afb1b8;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .client-link:hover &,
+    .client-link:focus & {
+      fill: $AccentColor;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 93px;
+    padding-bottom: 93px;
+    &-title {
+      font-size: 36px;
+      margin-bottom: 50px;
+    }
+    &-list {
+      display: flex;
+      gap: 30px;
+      justify-content: center;
+    }
+    &-link {
+      width: 170px;
+      height: 92px;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &-item:nth-child(1) {
+      margin-right: 30px;
+      margin-bottom: 30px;
+    }
+    &-item:nth-child(2) {
+      margin-right: 30px;
+      margin-bottom: 30px;
+    }
+    &-item:nth-child(3) {
+      margin-bottom: 30px;
+    }
+    &-item:nth-child(4) {
+      margin-right: 30px;
+    }
+    &-item:nth-child(5) {
+      margin-right: 30px;
+    }
+    &-list {
+      grid-template-columns: 1fr 1fr 1fr;
+      margin-top: 30px;
+    }
+    &-link {
+      width: 226px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    &-item:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+    &-container {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    &-item {
+    }
+  }
 }
-}
-
-
-
-
-
-
-
-// .client{
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-//   &-title{
-//     color:$TitleTextColor;
-//     font-weight: 700;
-//     font-size: 36px;
-//     line-height: 100%;
-//     text-align: center;
-//     margin-bottom: 50px
-//   }
-//   &-list{
-//         display: flex;
-//     gap: 30px;
-//     justify-content: center;
-// }
-// &-item:hover{
-//      border-color:$AccentColor;}
-// &-link{
-//       align-items: center;
-//   display: flex;
-//   justify-content: center;
-//   width: 170px;
-//   height: 92px;
-//   border: 1px solid #afb1b8;
-//   border-radius: 4px;
-//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   &:focus, &:hover {
-//     border-color: $AccentColor;
-//   }
-// }
-// &-icon{
-//       fill: #afb1b8;
-//       transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   .client-link:hover &,
-//   .client-link:focus &{
-//     fill:$AccentColor;
-// }
-//   }
-// }
-  
