--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,86 +1,45 @@
-.filter{
-    padding-top: 60px;
-    padding-bottom: 60px;
-    &-button{
-              color: $TitleTextColor;
-  background-color: #f5f4fa;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 4px;
-  border: transparent;
-  padding: 6px 22px ;
-  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-     &:hover{
+.filter {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  &-button {
+    color: $TitleTextColor;
+    background-color: #f5f4fa;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 4px;
+    border: transparent;
+    padding: 6px 22px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
       color: $WhiteColor;
-  background-color:$AccentColor;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      background-color: $AccentColor;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
   }
+  &-list {
+    padding-bottom: 40px;
+  }
+  @media screen and (max-width: 480px) {
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
     }
-    &-list{
-        padding-bottom: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    &-list {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 50px;
+      gap: 8px;
     }
-    @media screen and (max-width:480px){
-        &-list{ display: flex;
-        flex-wrap: wrap;
-        gap: 8px;}
-       
-    }
-    @media screen and (min-width:768px){
-&-list{ display: flex;
-    justify-content: center;
-    padding-bottom: 50px;
-    gap: 8px;}
-    }
-    
-@media  screen and (min-width:1200px) {
+  }
+
+  @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
-    
+  }
 }
-}
-
-
-
-
-
-
-
-
-
-
-
-// .filter{
-//      padding-top: 94px;
-//   padding-bottom: 94px;
-//   &-list{
-//       display: flex;
-//   justify-content: center;
-//   gap: 8px;
-//   margin-bottom: 50px;
-//   }
-//   &-button{
-//       color: $TitleTextColor;
-//   background-color: #f5f4fa;
-//   font-weight: 500;
-//   font-size: 16px;
-//   line-height: 1.63;
-//   text-align: center;
-//   cursor: pointer;
-//   border-radius: 4px;
-//   border: transparent;
-//   padding-top: 6px;
-//   padding-right: 22px;
-//   padding-bottom: 6px;
-//   padding-left: 22px;
-//   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   &:hover{
-//       color: $WhiteColor;
-//   background-color:$AccentColor;
-//   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-//   }
-//   }
-// }
