--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,98 +1,82 @@
 .hero {
-   background-image: linear-gradient(to right, #2f303a66),
-    url(/images/Header-phone-img.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
+  background-image:
+    linear-gradient(to right, #2f303a66), url(/images/Header-phone-img.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
   @media screen and (max-width: 767px) {
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-   padding-top: 118px;
-  padding-bottom:118px ;
-  padding-right: 60px;
-  padding-left: 60px;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    padding-right: 60px;
+    padding-left: 60px;
   }
- 
-  &-title{
-     color:$WhiteColor;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 1.36;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  text-align: center;
- 
+
+  &-title {
+    color: $WhiteColor;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.36;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    text-align: center;
   }
-  @media screen and (min-width:768px){
-    
-  
-  margin-left: auto;
-  margin-right: auto;
-  padding: 118px 204px;
- display: flex;
- flex-wrap: wrap;
- justify-content: center;
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 118px 204px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
- 
-  &-title{
-     color:$WhiteColor;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 1.36;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  text-align: center;
- 
+
+  &-title {
+    color: $WhiteColor;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.36;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    text-align: center;
   }
-  @media screen and (min-width:1200px){
-        padding-top: 200px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
-    &-title{
-          font-size: 44px;
+    &-title {
+      font-size: 44px;
     }
   }
 }
-@media (min-resolution: 2dppx){
-  .hero{
+@media (min-resolution: 2dppx) {
+  .hero {
     background-image: url(/images/Header-phone-img@2x.jpg);
     background-size: contain;
-  }}
-
-@media (min-width:481px){
-  .hero{
-    background-image: url(/images/Header-tablet__img.jpg);
-  background-size: contain;}
-    @media (min-resolution: 2dppx)
-    {
-      .hero{
-        background-image: url(/images/Header-tablet__\ img@2x.jpg);
-        background-size: contain;
-      }
-    }
   }
-  @media screen and (min-width:769px){
-    .hero{
-      background-image: url(/images/background-image.jpg);
+}
+
+@media (min-width: 481px) {
+  .hero {
+    background-image: url(/images/Header-tablet__img.jpg);
+    background-size: contain;
+  }
+  @media (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(/images/Header-tablet__\ img@2x.jpg);
       background-size: contain;
     }
-    @media (min-resolution:2dppx){
-      .hero{
-        background-image: url(/images/background-img@2x.jpg);
-        background-size: contain;
-      }
+  }
+}
+@media screen and (min-width: 769px) {
+  .hero {
+    background-image: url(/images/background-image.jpg);
+    background-size: cover;
+  }
+  @media (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(/images/background-img@2x.jpg);
+      background-size: contain;
     }
   }
-
-
-
-//   display: flex;
-//   flex-wrap: wrap;
-//   text-align: center;
-//   padding-top: 200px;
-//   padding-bottom: 200px;
-  
-//   }
-
-  
-// }
+}
