--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,16 +1,15 @@
-.modal{
-      position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
-    background-color:$WhiteColor;
-    @media screen and (max-width:768px
-    ){
-      width:450px ;
-      height: 609px;
-    }
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: $WhiteColor;
+  @media screen and (max-width: 768px) {
+    width: 450px;
+    height: 609px;
+  }
 }
 .modal-form {
   display: flex;
@@ -18,99 +17,98 @@
   width: 100%;
   padding: 40px;
   &__field {
-  position: relative;
-  & input::placeholder {
-  margin-left: 15px;
-}
+    position: relative;
+    & input::placeholder {
+      margin-left: 15px;
+    }
   }
-&__title {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 100%;
-  text-align: center;
-}
-&__label {
-  margin-bottom: 4px;
-  margin-top: 10px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 100%;
-  color: $PrimerColor;
-}
-&__input {
-  border: 1px solid #21212133;
-  border-radius: 4px;
-  height: 40px;
-  padding-left: 42px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  width: 100%;
-  &:focus{
-  border-color: #2196f3;
-  outline: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__title {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 100%;
+    text-align: center;
   }
-}
-&__icon {
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  top: 11px;
-  left: 12px;
-  fill: #000000;
-  .modal-form__input:focus + & {
-  fill: $AccentColor;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-&__textarea {
-  height: 120px;
-  width: 100%;
-  border: 1px solid #21212133;
-  border-radius: 4px;
-  padding: 12px 16px;
-  resize: none;
-  &:focus{
-      border-color: #2196f3;
-  outline: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-&__checkbox {
-  display: flex;
-  align-items: center;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  color:$PrimerColor;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  @media screen and (max-width:768px){
+  &__label {
+    margin-bottom: 4px;
+    margin-top: 10px;
+    font-weight: 400;
     font-size: 12px;
+    line-height: 100%;
+    color: $PrimerColor;
   }
-}
-&__button {
-  display: flex;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  background-color:$AccentColor;
-  width: 200px;
-  height: 50px;
-  border: none;
-  color:$WhiteColor;
-  border-radius: 4px;
-  align-items: center;
-  justify-content: center;
-  margin-left: 12px;
-  cursor: pointer;
-}
-
+  &__input {
+    border: 1px solid #21212133;
+    border-radius: 4px;
+    height: 40px;
+    padding-left: 42px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    width: 100%;
+    &:focus {
+      border-color: #2196f3;
+      outline: none;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  &__icon {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    top: 11px;
+    left: 12px;
+    fill: #000000;
+    .modal-form__input:focus + & {
+      fill: $AccentColor;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  &__textarea {
+    height: 120px;
+    width: 100%;
+    border: 1px solid #21212133;
+    border-radius: 4px;
+    padding: 12px 16px;
+    resize: none;
+    &:focus {
+      border-color: #2196f3;
+      outline: none;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  &__checkbox {
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    color: $PrimerColor;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (max-width: 768px) {
+      font-size: 12px;
+    }
+  }
+  &__button {
+    display: flex;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    background-color: $AccentColor;
+    width: 200px;
+    height: 50px;
+    border: none;
+    color: $WhiteColor;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 12px;
+    cursor: pointer;
+  }
 }
 .modal-checkbox__icon {
   display: inline-block;
@@ -125,7 +123,7 @@
 .modal-checkbox-input:checked + .modal-checkbox__icon {
   background-image: url(../images/icon-check.svg);
   background-color: $AccentColor;
-  border-color:$AccentColor;
+  border-color: $AccentColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-checkbox-input {
@@ -139,7 +137,7 @@
   justify-content: center;
 }
 .modal-agreement__link {
-  color:$AccentColor;
+  color: $AccentColor;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
@@ -152,7 +150,7 @@
   right: 8px;
   width: 30px;
   height: 30px;
-  background-color:$WhiteColor;
+  background-color: $WhiteColor;
   border-radius: 50%;
   border: 1px solid #0000001a;
   padding: 0;
@@ -160,8 +158,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  &:hover, &:focus{
-fill: $AccentColor;
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: $AccentColor;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
