--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,13 +1,12 @@
 .page-header {
   border-bottom: solid 1px #ececec;
   position: relative;
-@media screen and (max-width:767px)
-{
-  padding-top: 16px;
-  padding-bottom: 16px;
+  @media screen and (max-width: 767px) {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
-}
-.menu-button{
+.menu-button {
   display: inline-flex;
   padding: 0;
   margin: 0;
@@ -17,156 +16,168 @@
   top: 10px;
   right: 15px;
   z-index: 999;
-  & .icon-close{
+  & .icon-close {
     display: none;
   }
-  &.is-open .icon-close{
-display: block;
+  &.is-open .icon-close {
+    display: block;
   }
-  &.is-open .icon-menu{
+  &.is-open .icon-menu {
     display: none;
   }
-  @media screen and (min-width:768px)
-  {display: none;}
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
-  @media screen and (max-width:767px){
-.navigation{
- margin-bottom: 302px;
-  &-item:not(:last-child){
-    margin-bottom: 32px;
+@media screen and (max-width: 767px) {
+  .navigation {
+    margin-bottom: 302px;
+    &-item:not(:last-child) {
+      margin-bottom: 32px;
+    }
+    &-link {
+      font-size: 40px;
+      font-weight: 500;
+      line-height: 100%;
+      color: #212121;
+    }
   }
-  &-link{
-        font-size: 40px;
-    font-weight: 500;
-    line-height: 100%;
-    color: #212121;
-  }
-  }
-   .social-header{
-  display: flex;
-  gap: 20px;
-      margin-top: 32px;
+  .social-header {
+    display: flex;
+    gap: 20px;
+    margin-top: 32px;
     margin-bottom: 48px;
-    
+  }
+  .social-link__header {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
-.social-link__header{
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-}}
 
-
-@media screen and (min-width:768px){
-  .social-header{
-  display: none;
-}}
+@media screen and (min-width: 768px) {
+  .social-header {
+    display: none;
+  }
+}
 
 .main-nav {
   display: flex;
   align-items: center;
+}
+
+.navigation {
+  &-link {
+    color: $TitleTextColor;
+    font-weight: 500;
+    line-height: 100%;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover {
+      color: $AccentColor;
+    }
   }
 
-  .navigation {
+  @media screen and (min-width: 768px) {
+    & {
+      margin-left: 88px;
+    }
 
-&-link {
-  color:$TitleTextColor;
-  font-weight: 500;
-  line-height: 100%;
-  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-  &:focus, &:hover{
-    color:$AccentColor;
-  }}
-
-  @media screen and (min-width:768px)
-  {
-& {margin-left: 88px;}
-  
-  &-list{
-  display: flex;
-
-} &-item{
-    padding-bottom: 32px;
-    padding-top: 32px;
+    &-list {
+      display: flex;
+    }
+    &-item {
+      padding-bottom: 32px;
+      padding-top: 32px;
+    }
+    & .navigation-item:not(:last-child) {
+      margin-right: 50px;
+    }
+    &-link {
+      font-size: 14px;
+      padding-bottom: 32px;
+      padding-top: 32px;
+    }
   }
-   & .navigation-item:not(:last-child){
-  margin-right: 50px;  }
-  &-link{
- font-size: 14px;
-padding-bottom: 32px;
-padding-top: 32px;
+  @media screen and (min-width: 1200px) {
+    & {
+      margin-left: 93px;
+    }
   }
 }
-@media screen and (min-width:1200px){
-  &{
-    margin-left: 93px;
-  }
-}
-  }
 
 .contact {
-  &-link{color: #757575;}
- &-icon{
-   fill: #757575;
-  margin-right: 10px;}
-  &-link:hover,&-link:focus{color: #2196f3;}
- &-link:hover .contact-icon {
-    fill: #2196f3;}
-  
-  @media screen and (max-width:767px){
-&-item{
-    margin-bottom: 32px;
+  &-link {
+    color: #757575;
   }
-&-link{
-   font-weight: 500;
-    font-size: 34px;
-    line-height: 100%;
-}
-&-icon{
+  &-icon {
+    fill: #757575;
+    margin-right: 10px;
+  }
+  &-link:hover,
+  &-link:focus {
+    color: #2196f3;
+  }
+  &-link:hover .contact-icon {
+    fill: #2196f3;
+  }
+
+  @media screen and (max-width: 767px) {
+    &-item {
+      margin-bottom: 32px;
+    }
+    &-link {
+      font-weight: 500;
+      font-size: 34px;
+      line-height: 100%;
+    }
+    &-icon {
       display: none;
     }
-    &-link__number{
-    font-size: 24px;
-    
-  }}
+    &-link__number {
+      font-size: 24px;
+    }
+  }
 
-@media screen and (min-width:768px)
-{
- margin-left: 84px;
- &-item:not(:last-child){
-  margin-bottom: 10px;
+  @media screen and (min-width: 768px) {
+    margin-left: 84px;
+    &-item:not(:last-child) {
+      margin-bottom: 10px;
+    }
+    &-link {
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 100%;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: 305px;
+    &-item:not(:last-child) {
+      margin-right: 50px;
+      margin-bottom: 0;
+    }
+    &-link {
+      padding-top: 32px;
+      padding-bottom: 32px;
+      font-size: 14px;
+    }
+  }
 }
-&-link{
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 100%;
- }}
-@media screen and (min-width:1200px){
-display: flex;
-margin-left: 305px;
-&-item:not(:last-child){
-margin-right: 50px;
-margin-bottom: 0;}
-&-link{
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-size: 14px;
-
-}
-
-  }}
-.accent{
+.accent {
   color: $AccentColor;
   position: relative;
-  &::after{
+  &::after {
     content: "";
     display: inline-block;
     height: 4px;
     width: 100%;
-    background-color:$AccentColor;
+    background-color: $AccentColor;
     position: absolute;
     left: 0;
     bottom: -1px;
     border-radius: 2px;
-  }}
+  }
+}
