--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,6 +3,13 @@
     linear-gradient(to right, #2f303a66), url(/images/Header-phone-img.jpg);
   background-size: contain;
   background-repeat: no-repeat;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  &-title {
+    text-align: center;
+  }
   @media screen and (max-width: 767px) {
     max-width: 1600px;
     margin-left: auto;
@@ -20,15 +27,11 @@
     line-height: 1.36;
     text-transform: uppercase;
     margin-bottom: 30px;
-    text-align: center;
   }
   @media screen and (min-width: 768px) {
     margin-left: auto;
     margin-right: auto;
     padding: 118px 204px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
   }
 
   &-title {
@@ -38,12 +41,10 @@
     line-height: 1.36;
     text-transform: uppercase;
     margin-bottom: 30px;
-    text-align: center;
   }
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
-    text-align: center;
     &-title {
       font-size: 44px;
     }
