--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -59,5 +59,13 @@
         margin-bottom: 30px;
       }
     }
+    &-images {
+      width: 450px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    &-images {
+      width: 354px;
+    }
   }
 }
